// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component should render correctly no current 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-c-breadcrumb__list"
    >
      <li
        class="pf-c-breadcrumb__item"
        data-key="0"
      >
        <a
          aria-label="first"
        >
          First
        </a>
      </li>
      <li
        class="pf-c-breadcrumb__item"
        data-key="1"
      >
        <span
          class="pf-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
        <a
          aria-label="second"
        >
          <span>
            Second
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component should render correctly no items 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-c-breadcrumb__list"
    >
      <li
        class="pf-c-breadcrumb__item"
      >
         
        Something
         
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component should render correctly with items and current item 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
    data-ouia-component-type="PF4/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-c-breadcrumb__list"
    >
      <li
        class="pf-c-breadcrumb__item"
        data-key="0"
      >
        <a
          aria-label="first"
        >
          First
        </a>
      </li>
      <li
        class="pf-c-breadcrumb__item"
        data-key="1"
      >
        <span
          class="pf-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
        <a
          aria-label="second"
        >
          <span>
            Second
          </span>
        </a>
      </li>
      <li
        class="pf-c-breadcrumb__item"
      >
        <span
          class="pf-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
         
        Something
         
      </li>
    </ol>
  </nav>
</div>
`;
